<resources>
    <!-- General Strings -->
    <string name="app_name">Personal Finance</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="me">Me</string>
    <string name="name">Name</string>
    <string name="alphaNumericCharacters">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="all">All</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="custom">Custom</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="plusSign">+</string>
    <string name="minusSign">-</string>
    <string name="img">Image</string>
    <string name="paid">Paid</string>
    <string name="initial">Initial</string>
    <string name="remaining">Remaining</string>
    <string name="list_empty_add_items">The list is empty. Click the + button to add a new entry</string>
    <string name="nothingHere">There\'s nothing here!</string>
    <string name="clickThePlus">Click the + to add a new item</string>
    <string name="no_data">No data to display</string>
    <string name="recommendedSpent">Recommended spent</string>
    <string name="averageSpent">Average spent</string>

    <!-- Dialog and menu Strings -->
    <string name="journal">Journal</string>
    <string name="saved">Saved</string>
    <string name="statistics">Statistics</string>
    <string name="activityHistory">History</string>
    <string name="debts">Debts</string>
    <string name="goals">Goals</string>
    <string name="budgets">Budgets</string>
    <string name="expIncHistory">Record History</string>
    <string name="transferHistory">Transfer History</string>
    <string name="about">About</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="save">Save</string>
    <string name="amount">Amount</string>
    <string name="deleted">Deleted</string>
    <string name="undo">Undo</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="submit">Submit</string>
    <string name="targetDate">Target Date</string>
    <string name="unselect">Unselect all</string>
    <string name="selectAll">Select all</string>
    <string name="addSavedAmount">Add saved amount</string>
    <string name="neverUsed">Never used</string>
    <string name="lastUsed">Last used %1$s</string>
    <string name="takeMeThere">Take me there</string>
    <string name="tryAgain">Try Again</string>
    <string name="filterCategories">Filter Categories</string>

    <!-- BalanceAccount -->
    <string name="accounts">Accounts</string>
    <string name="createAccount">Create balance account</string>
    <string name="editAccount">Edit account</string>
    <string name="account_name">Account name</string>
    <string name="account_not_found">Account not found</string>
    <string name="account_added">Account created</string>
    <string name="title_activity_detailed_account_history">DetailedAccountHistoryActivity</string>
    <string name="see_acc_history">See Account history</string>
    <string name="initial_balance">Initial balance</string>
    <string name="balanceAccount">Balance Account</string>
    <string name="account_updated">Account updated</string>
    <string name="currency">Currency</string>

    <!-- ExpenseIncome / Transfer -->
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="transfer">Transfer</string>
    <string name="addExpense">Add Expense</string>
    <string name="addTransfer">Make transfer</string>
    <string name="addIncome">Add income</string>
    <string name="record_created">Record created</string>
    <string name="addExpenseIncome">Add expense or income</string>
    <string name="to">To</string>
    <string name="from">From</string>

    <!-- Categories -->
    <string name="category">Category</string>
    <string name="communicationPC">Communication, PC</string>
    <string name="feesFines">Fees, Fines</string>
    <string name="food">Food</string>
    <string name="healthCare">Health care</string>
    <string name="hobbies">Hobbies</string>
    <string name="housing">Housing</string>
    <string name="transport">Transportation</string>
    <string name="vehicle">Vehicle</string>
    <string name="other">Other</string>
    <string name="wage">Wage</string>
    <string name="gifts">Gifts</string>
    <string name="sale">Sale</string>
    <string name="gambling">Gambling</string>

    <!-- Budget -->
    <string name="budget">Budget</string>
    <string name="addBudget">Add budget</string>
    <string name="spent">Spent</string>
    <string name="editBudgetAmount">Edit budget amount</string>
    <string name="seeBudgetDetails">See Budget Details</string>
    <string name="notificationExceededHalfBudgetTitle">Half gone</string>
    <string name="notificationExceededHalfBudgetBody">You exceeded half your %1$s%2$s budget</string>
    <string name="notificationExceededBudgetTitle">Budget exceeded</string>
    <string name="notificationExceededBudgetBody">You exceeded your %1$s%2$s budget</string>
    <string name="notificationAlreadyExceededBudgetTitle">Slow down!</string>
    <string name="notificationAlreadyExceededBudgetBody">You already exceeded your %1$s%2$s budget</string>
    <string name="budgetAdded">Budget added</string>

    <!-- Goal -->
    <string name="addGoal">Add Goal</string>
    <string name="goalAdded">Goal added</string>
    <string name="goalReached">Set goal as reached</string>
    <string name="seeGoalDetails">See Goal Details</string>
    <string name="goalAmount">Goal amount</string>
    <string name="goal">Goal</string>
    <string name="target_amount">Target amount</string>
    <string name="saved_amount">Saved already</string>
    <string name="rememberGoal">Remember your %1$s goal</string>
    <string name="goalNotAddInAWHile">You have not put money towards your goal in a while</string>

    <!-- Debt -->
    <string name="debt">Debt</string>
    <string name="payDebtAmount">Pay amount</string>
    <string name="createDebt">Add Debt</string>
    <string name="debt_added">Debt created</string>
    <string name="closeDebt">Close debt</string>
    <string name="seeDebtDetails">See Debt Details</string>
    <string name="type">Type</string>
    <string name="toFrom">To/From</string>
    <string name="debtClosed">Debt closed</string>
    <string name="rememberDebtTo">Remember your debt to %1$s</string>
    <string name="rememberDebtFrom">Remember the debt %1$s has to you</string>
    <string name="debtNotAddInAWHile">Money has not been put towards this debt in a while</string>

    <!-- Error Strings -->
    <string name="error">Error occurred</string>
    <string name="error_account_create">Error creating account</string>
    <string name="error_account_update">Error updating account</string>
    <string name="error_name">Name cannot be empty</string>
    <string name="error_debt">Error adding debt</string>
    <string name="errorGoal">Error adding goal</string>
    <string name="errorInputZero">Amount cannot be zero</string>
    <string name="error_amount">Amount cannot be empty</string>
    <string name="startDateEndDate">Start date can not be after end date</string>
</resources>
