<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navMenuAccounts"
        android:icon="@drawable/nav_accounts"
        android:title="@string/accounts" />

    <item
        android:id="@+id/navMenuStats"
        android:icon="@drawable/nav_statistics"
        android:title="@string/statistics" />

    <item
        android:id="@+id/navMenuHistory"
        android:icon="@drawable/nav_history"
        android:title="@string/expIncHistory" />

    <item
        android:id="@+id/navMenuTransferHistory"
        android:icon="@drawable/nav_history"
        android:title="@string/transferHistory" />

    <item
        android:id="@+id/navMenuDebts"
        android:icon="@drawable/nav_debts"
        android:title="@string/debts" />

    <item
        android:id="@+id/navMenuGoals"
        android:icon="@drawable/nav_goals"
        android:title="@string/goals" />

    <item
        android:id="@+id/navMenuHelp"
        android:icon="@drawable/nav_help"
        android:title="@string/help" />

</menu>