<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/thisTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/otherTv"
        android:gravity="center_horizontal"
        android:text="@string/nothingHere"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/otherTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/clickThePlus"
        android:textSize="48sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/otherTv"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/list_empty_add_items"
        android:src="@drawable/ic_arrow_right_down" />

</RelativeLayout>