<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <CheckBox
        android:id="@+id/dialogFilterIncCheckBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Test" />

    <CheckBox
        android:id="@+id/dialogFilterIncCheckBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Test" />

    <CheckBox
        android:id="@+id/dialogFilterIncCheckBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Test" />

    <CheckBox
        android:id="@+id/dialogFilterIncCheckBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Test" />

    <Button
        android:id="@+id/dialogFilterIncUnselectBtn"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/unselect" />

    <Button
        android:id="@+id/dialogFilterIncSelectBtn"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/selectAll" />

    <Button
        android:id="@+id/dialogFilterIncSaveBtn"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/save" />

</LinearLayout>