<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingTop="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/filterCategoryTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filterCategories"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/text_big" />

        <CheckBox
            android:id="@+id/dialogFilterExpCheckBoxAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            tools:text="" />

    </RelativeLayout>

    <CheckBox
        android:id="@+id/dialogFilterExpCheckBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Test" />

    <CheckBox
        android:id="@+id/dialogFilterExpCheckBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Test" />

    <CheckBox
        android:id="@+id/dialogFilterExpCheckBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Test" />

    <CheckBox
        android:id="@+id/dialogFilterExpCheckBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Test" />

    <CheckBox
        android:id="@+id/dialogFilterExpCheckBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Test" />

    <CheckBox
        android:id="@+id/dialogFilterExpCheckBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Test" />

    <CheckBox
        android:id="@+id/dialogFilterExpCheckBox7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Test" />

    <CheckBox
        android:id="@+id/dialogFilterExpCheckBox8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Test" />

    <CheckBox
        android:id="@+id/dialogFilterExpCheckBox9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Test" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialogFilterExpCancelBtn"
            style="@style/buttonStyle"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/dialogFilterExpSaveBtn"
            style="@style/buttonStyle"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/ok"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</LinearLayout>